# SprayHub

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
scripts/: README.md  check.ps1  check.sh  setup-windows.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: dto.rs  mod.rs
src-tauri/src/application/use_cases/: apply_spray.rs  create_spray.rs  detect_steam.rs  manage_config.rs  mod.rs  scan_sprays.rs
src-tauri/src/domain/: error.rs  mod.rs  path_rules.rs
src-tauri/src/domain/entities/: apply.rs  config.rs  game.rs  mod.rs  new_spray.rs  spray.rs  steam.rs
src-tauri/src/domain/repositories/: applier_repository.rs  config_repository.rs  game_repository.rs  mod.rs  spray_repository.rs  writer_repository.rs
src-tauri/src/infrastructure/: logging.rs  mod.rs
src-tauri/src/infrastructure/config/: json_config.rs  mod.rs
src-tauri/src/infrastructure/filesystem/: applier.rs  mod.rs  spray_scanner.rs  spray_writer.rs  vtf.rs  vtf_encode.rs
src-tauri/src/infrastructure/steam/: game_catalog.rs  mod.rs  steam_locator.rs  vdf.rs
src-tauri/src/presentation/: commands.rs  error.rs  mod.rs  state.rs
(+64 files in other folders)
